Accept source ACI at `/v1/messages/report`